--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">steganography</string>
     <string name="encode_button">ENCODE</string>
     <string name="decode_button">DECODE</string>
+    <string name="title_activity_information">InformationActivity</string>
+    <string name="action_settings">Settings</string>
+    <string name="section_format">Hello World from section: %1$d</string>
 </resources>
